--- a/server/monitor/templates/monitor/placaList.html
+++ b/server/monitor/templates/monitor/placaList.html
@@ -13,109 +13,110 @@
 {% endblock %}
 
 {% block content %}
+<main class="conteudo">
+    {% if user.is_authenticated %}
 
-{% if user.is_authenticated %}
-
-<div>
-    <div class="table-responsive"> 
-        <table class="js-dynamitable table table-bordered" id="tablesorter">
-            <thead>
-                <tr>
-                    <th>
-                        Campi
-                        <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
-                        <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
-                    </th>
-                    <th>
-                        Ponto de controle
-                        <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
-                        <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
-                    </th>
-                    <th>
-                        Endereço
-                        <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
-                        <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
-                    </th>
-                    <th>
-                        Longitude
-                        <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
-                        <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
-                    </th>
-                    <th>
-                        Latitude
-                        <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
-                        <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
-                    </th>
-                    <th>
-                        Tag-Slug
-                        <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
-                        <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
-                    </th>
-                    <th>
-                        Direção
-                        <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
-                        <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
-                    </th>
-                    <th>
-                        Placa
-                        <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
-                        <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
-                    </th>
-                    <th>
-                        Data e hora
-                        <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
-                        <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
-                    </th>
-                </tr>
-                <tr>
-                    <th><input class="js-filter form-control" type="text" value=""></th>
-                    <th><input class="js-filter form-control" type="text" value=""></th>
-                    <th><input class="js-filter form-control" type="text" value=""></th>
-                    <th><input class="js-filter form-control" type="text" value=""></th>
-                    <th><input class="js-filter form-control" type="text" value=""></th>
-                    <th><input class="js-filter form-control" type="text" value=""></th>
-                    <th><input class="js-filter form-control" type="text" value=""></th>
-                    <th><input class="js-filter form-control" type="text" value=""></th>
-                    <th><input class="js-filter form-control" type="text" value=""></th>
-                </tr> 
-            </thead>
-            <tbody>
-                <tr>
-                    {% for placa in placa_list %}
-                            <td>{{ placa.layer }}</td>
-                            <td>{{ placa.name }}</td>
-                            <td>{{ placa.address }}</td>
-                            <td>{{ placa.latitude }}</td>
-                            <td>{{ placa.longitude }}</td>
-                            <td>{{ placa.tag_slug }}</td>
-                            <td>{{ placa.direction }}</td>
-                            <td>{{ placa.license_plate }}</td>
-                            <td>{{ placa.detection_date }}</td>
-                            </tr>
-                    {% endfor %}</tr>
-            </tbody>
-        </table>
+    <div>
+        <div class="table-responsive"> 
+            <table class="js-dynamitable table table-bordered" id="tablesorter">
+                <thead>
+                    <tr>
+                        <th>
+                            Campi
+                            <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
+                            <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
+                        </th>
+                        <th>
+                            Ponto de controle
+                            <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
+                            <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
+                        </th>
+                        <th>
+                            Endereço
+                            <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
+                            <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
+                        </th>
+                        <th>
+                            Longitude
+                            <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
+                            <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
+                        </th>
+                        <th>
+                            Latitude
+                            <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
+                            <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
+                        </th>
+                        <th>
+                            Tag-Slug
+                            <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
+                            <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
+                        </th>
+                        <th>
+                            Direção
+                            <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
+                            <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
+                        </th>
+                        <th>
+                            Placa
+                            <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
+                            <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
+                        </th>
+                        <th>
+                            Data e hora
+                            <span class="js-sorter-desc glyphicon glyphicon-chevron-down pull-right"></span> 
+                            <span class="js-sorter-asc glyphicon glyphicon-chevron-up pull-right"></span>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th><input class="js-filter form-control" type="text" value=""></th>
+                        <th><input class="js-filter form-control" type="text" value=""></th>
+                        <th><input class="js-filter form-control" type="text" value=""></th>
+                        <th><input class="js-filter form-control" type="text" value=""></th>
+                        <th><input class="js-filter form-control" type="text" value=""></th>
+                        <th><input class="js-filter form-control" type="text" value=""></th>
+                        <th><input class="js-filter form-control" type="text" value=""></th>
+                        <th><input class="js-filter form-control" type="text" value=""></th>
+                        <th><input class="js-filter form-control" type="text" value=""></th>
+                    </tr> 
+                </thead>
+                <tbody>
+                    <tr>
+                        {% for placa in placa_list %}
+                                <td>{{ placa.layer }}</td>
+                                <td>{{ placa.name }}</td>
+                                <td>{{ placa.address }}</td>
+                                <td>{{ placa.latitude }}</td>
+                                <td>{{ placa.longitude }}</td>
+                                <td>{{ placa.tag_slug }}</td>
+                                <td>{{ placa.direction }}</td>
+                                <td>{{ placa.license_plate }}</td>
+                                <td>{{ placa.detection_date }}</td>
+                                </tr>
+                        {% endfor %}</tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
-  
-<script src="{% static 'js/dynamitable.jquery.min.js' %}"></script>
-<script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-36251023-1']);
-    _gaq.push(['_setDomainName', 'jqueryscript.net']);
-    _gaq.push(['_trackPageview']);
+    
+    <script src="{% static 'js/dynamitable.jquery.min.js' %}"></script>
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-36251023-1']);
+        _gaq.push(['_setDomainName', 'jqueryscript.net']);
+        _gaq.push(['_trackPageview']);
 
-    (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-</script>
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 
-{% else %}
-<h1>Acesso não autorizado</h1>
-<h2>Realize o login</h2>
-{% endif %}
+    {% else %}
+    <h1>Acesso não autorizado</h1>
+    <h2>Realize o login</h2>
+    {% endif %}
+</main>
 {% endblock %}
 
 
