--- a/server/monitor/static/style/style.css
+++ b/server/monitor/static/style/style.css
@@ -32,7 +32,7 @@
 
 .naveg-nav{
     list-style: none;
-    margin-left: 37%;
+    margin-left: 33%;
     color: #0a1649;
     margin-top: 3px;
     
@@ -64,7 +64,7 @@
     position: absolute; 
     top: 112px; 
 	text-align: center;
-    margin-left: -700px;
+    margin-left: -1400px;
 }
 
 .naoAutorizado{
@@ -83,3 +83,26 @@
     margin-left: 700px;
 }
 
+.cameras{
+    width: 40%;
+}
+
+.home{
+    width: 800px;
+    text-align: center;
+    margin-left: -200px;
+    margin-top: 180px;
+}
+
+.home h1{
+    font-weight: bolder;
+    padding-bottom: 10px;
+}
+
+.home h3{
+    font-size: 17pt;
+}
+
+.monitor{
+    width: 100%;
+}
