--- a/server/monitor/templates/monitor/index.html
+++ b/server/monitor/templates/monitor/index.html
@@ -1,97 +1,13 @@
+{% extends 'base.html' %}
 {% load static %}
 {% load l10n %}
-<!DOCTYPE html>
-<html lang='pt'>
-  <head>
-  <title>Cerca Inteligente | Munic&iacute;pio de Volta Redonda</title>
+{% block title %}Monitora UFF{% endblock %}
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Cerca Inteligente | Munic&iacute;pio de Volta Redonda">
+{% block content %}
+<main class="home">
+    <img class="cameras" src="{% static 'images/cameras.png' %}">
+    <h1>Bem vindo ao MonitoraUFF</h1>
+    <h3>Sistema de controle de circulação de veículos dentros dos campi da UFF</h3>
+</main>
 
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="{% static 'style/style.css' %}">
-
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="{% static 'js/utils.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/map.js' %}"></script>
-  <script type="text/javascript">
-    const STATUS_AGENT_OFF = 0;
-    const STATUS_AGENT_ON_CAMERA_OFF = 1;
-    const STATUS_AGENT_ON_CAMERA_ON = 2;
-    const STATUS_UNKNOWN = 3;
-    
-    const ICONS = {
-        status: [
-            {icon: "{% static "images/icons/camera-red.png" %}"},
-            {icon: "{% static "images/icons/camera-yellow.png" %}"},
-            {icon: "{% static "images/icons/camera-green.png" %}"},
-            {icon: "{% static "images/icons/camera-white.png" %}"},
-        ]
-    };
-    
-    var layers = new Map();
-    {% for layer in layer_list %}
-    layers.set({{ layer.id }}, {
-        name: "{{ layer.name }}",
-        controlpoints: []
-    });
-    {% endfor %}
-  
-    var controlpoints = new Map();
-    {% for controlpoint in controlpoint_list %}
-    controlpoints.set({{ controlpoint.id }}, {
-        id: "{{ controlpoint.id }}",
-        name: "{{ controlpoint.name }}",
-        address: "{{ controlpoint.address }}",
-        latitude: {{ controlpoint.latitude|unlocalize }},
-        longitude: {{ controlpoint.longitude|unlocalize }},
-        layer: layers.get({{ controlpoint.layer.id }}),
-        cameras: [],
-        marker: undefined
-    });
-    layers.get({{ controlpoint.layer.id }}).controlpoints.push(controlpoints.get({{ controlpoint.id }}));
-    {% endfor %}
-    
-    var cameras = new Map();
-    {% for camera in camera_list %}
-    cameras.set("{{ camera.tag_slug }}", {
-        tag_slug: "{{ camera.tag_slug }}",
-        direction: "{{ camera.direction_verbose }}",
-        rtsp_url: "{{ camera.rtsp_url }}",
-        status: STATUS_AGENT_OFF,
-        controlpoint: controlpoints.get({{ camera.controlpoint.id }})
-    });
-    controlpoints.get({{ camera.controlpoint.id }}).cameras.push(cameras.get("{{ camera.tag_slug }}"));
-    {% endfor %}
-  </script>
-  </head>
-    
-
-  <body class="w3-light-blue">
-
-    <!-- Icon Bar (Sidebar - hidden on small screens) -->
-    <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-      <!-- Avatar image in top left corner -->
-      <img src="{% static 'images/vr-brasao.png' %}" style="width:100%">
-      <a href="javascript:map.fitBounds(bounds)" class="w3-bar-item w3-button w3-padding-large w3-light-blue">
-        <i class="fa fa-home w3-xxlarge"></i>
-        <p>HOME</p>
-      </a>
-    </nav>
-
-    <!-- Navbar on small screens (Hidden on medium and large screens) -->
-    <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
-      <div class="w3-bar w3-light-blue w3-opacity w3-hover-opacity-off w3-center w3-small">
-        <a href="javascript:map.fitBounds(bounds)" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
-      </div>
-    </div>
-
-    <!-- Page Content -->
-    <div class="w3-padding-large" id="map-canvas"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkGYZPNefP8ERD-xS1y_2RTHPxn-rFSdE&callback=initMap"></script>
-
-  </body>
-</html>
+{% endblock %}
