--- a/server/monitor/templates/monitor/base.html
+++ b/server/monitor/templates/monitor/base.html
@@ -33,6 +33,9 @@
                         <a class="naveg-link" href="{% url 'monitor:placaList' %}">Base de dados</a>
                     </li>
                     <li class="naveg-item">
+                        <a class="naveg-link" href="{% url 'monitor:administracao' %}">Administração</a>
+                    </li>
+                    <li class="naveg-item">
                         <a class="naveg-link" href="{% url 'account_logout' %}">Sair</a>
                     </li>
                     {% else %}
