--- a/server/monitor/static/style/style.css
+++ b/server/monitor/static/style/style.css
@@ -110,6 +110,7 @@
 
 .home h1{
     font-weight: bolder;
+    text-align: center;
     padding-bottom: 10px;
 }
 
@@ -144,9 +145,49 @@
 /********MESSAGES**********/
 
 ul.messages{
-        padding: 0;
+    padding: 0;
 }
 
 ul.messages li{
     list-style: none;
+}
+
+ul.msg_erro{
+    font-size: 22pt;
+}
+
+.home li{
+    list-style: none;
+    font-weight: bolder;
+    border: 2px solid rgb(245, 4, 4, 0.5); 
+    text-align: center;
+    border-radius: 10px;
+    padding-right: 0px;
+    padding: 5px; 
+    background-color: rgba(209, 15, 15, 0.1);
+}
+
+/**********PLACALIST*************/
+
+.maisInfo{
+    padding-left: 5px;
+}
+
+/************PLACAVIEW**********/
+
+.carro{
+    position: relative;
+    margin-left: -1100px;
+    margin-top: -50px;
+}
+
+.placaView #infoCar{
+    position: relative;
+    margin-left: 50px;
+    margin-top: -320px;
+}
+
+.placaView #tablesorter{
+    margin-left: -700px;
+    margin-top: 550px;
 }
